fix: fixing spacing issues on the mobile apps

--- a/web-application/client/layouts/FooterlessLayout.css
+++ b/web-application/client/layouts/FooterlessLayout.css
@@ -1,12 +1,15 @@
+.ios main#footerless, .android main#footerless {
+    padding-bottom: 60px;
+}
 
 @media (1600px <= width) {
-    main {
+    main#footerless {
         box-sizing: border-box;
 
         margin: 65px auto 0 auto; /** push us below the header **/
         min-width: 360px;
         width: 100%;
-        min-height: calc(100vh - 436px);
+        min-height: 600px;
 
         color: var(--main-text-color);
         background-color: var(--main-background-color);
@@ -14,26 +17,26 @@
 }
 
 @media (1220px < width < 1600px) {
-    main {
+    main#footerless {
         box-sizing: border-box;
 
         margin: 65px auto 0 auto; /** push us below the header **/
         min-width: 360px;
         width: 100%;
-        min-height: calc(100vh - 436px);
+        min-height: 600px;
 
         color: var(--main-text-color);
         background-color: var(--main-background-color);
     }
 }
 @media (width <= 1220px) {
-    main {
+    main#footerless {
         box-sizing: border-box;
 
         margin: 65px auto 0 auto; /** push us below the header **/
         min-width: 360px;
         width: 100%;
-        min-height: calc(100vh - 436px);
+        min-height: 600px;
 
         color: var(--main-text-color);
         background-color: var(--main-background-color);
