--- a/web-application/client/pages/authentication/ResetPasswordRequestPage.css
+++ b/web-application/client/pages/authentication/ResetPasswordRequestPage.css
@@ -10,7 +10,7 @@
     #reset-password-request {
         box-sizing: border-box;
         display: block;
-        margin: auto auto;
+        margin: 105px auto;
         padding: 20px;
         width: 600px;
         border: thin solid var(--main-border-color);
@@ -23,7 +23,7 @@
     #reset-password-request {
         box-sizing: border-box;
         display: block;
-        margin: 0 auto;
+        margin: 105px auto;
         padding: 10px;
         width: 100%;
         border-top: thin solid var(--main-border-color);
